--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     padding: 0px;
 }
 html{
-    line-height: 115%;
+    line-height: 1.15em;
     scroll-behavior: smooth;
 }
 title{
@@ -145,18 +145,18 @@ button{
 
 /* MAIN SECTION, A GALLERY GRID*/
 main{
-    width: 100vw;
+    width: 100%;
     margin-top: 60px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% auto;
     grid-template-rows: 960px;
     transition: 300ms;
 }
 main:has(.left:hover){
-    grid-template-columns: 1.1fr 0.9fr;
+    grid-template-columns: 60% auto;
 }
 main:has(.right:hover){
-    grid-template-columns: 0.9fr 1fr;
+    grid-template-columns: 40% auto;
 }
 .text-item{
     place-self: center;
@@ -167,7 +167,6 @@ main:has(.right:hover){
 }
 .img-item{
     place-self: stretch;
-    z-index: -1;
     transition: width 0.3s ease-in-out;
 }
 .left.img-item{
@@ -175,6 +174,7 @@ main:has(.right:hover){
     background-image: url("../img/ilya-mirnyy.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 .right.img-item{
     grid-column: 2 /3;
