--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,11 +454,11 @@ footer a{
     color: var(--secondaryText);
 }
 #footer-links{
-    width: 68.803%;
+    width: 61.803%;
     justify-content: space-between;
     padding-right: 2rem;
 }
-.spacer{
+.spacer-1{
     width: 1rem;
 }
 /*
