--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,7 +514,7 @@ footer a{
     transition: all 200ms;
     width: 100%;
     height: 10rem;
-    padding: 1rem;
+    padding: 1rem 0.5rem;
     resize: none;
     margin: 1rem;
 }
@@ -523,16 +523,24 @@ footer a{
     border-color: var(--primaryText);
 }
 #contact-form input[type="submit"]{
-    background-color: white;
+    background-color: var(--pastelPeach);
     border: none;
     border-width: 0 0 1px 1px;
     border-style: solid;
     border-color: var(--primaryText);
     color: var(--primaryText);
-    width: 10%; 
+    width: 20%; 
     margin: 1rem;
     padding: 0.5rem;    
     box-shadow: 3px -3px 3px rgba(0, 0, 0, 0.1);
+}
+#contact-box iframe{
+    width: 100%;
+    height: 17rem;
+}
+#contact-box h2{
+    font-size: 24px;
+    font-weight: 500;
 }
 .form-column{
     display: flex;
