--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,6 +478,7 @@ footer a{
 }
 .spacer-1{
     width: 1rem;
+    height: 1rem;
 }
 #portfolio, #author{
     width: 61.803%;
@@ -557,6 +558,27 @@ footer a{
     border-bottom: 1px solid var(--primaryText);
     margin: 1rem;
 }
+#faq h2{
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom:3rem;
+}
+#faq p{
+    color: var(--secondaryText);
+    text-align: justify;
+}
+#faq p.sub-heading{
+    color: var(--primaryText);
+    text-align: center;
+}
+.sub-heading{
+    font-family: 'Cormorant Garamond';
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 1rem 0;
+}
+
 /*
 footer form{
     display: flex;
