--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,15 @@ aside > p, aside > a{
     width: 68.803%;
     padding: 5rem 0;
 }
+#contact-box{
+    padding: 3rem 0;
+}
+#contact-box div.right-text{
+   padding: 0;
+   width: 100%;
+   padding-left: 3rem;
+   padding-right: 3rem;
+}
 .left-image{
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -535,6 +544,11 @@ footer a{
     padding: 0.5rem;    
     box-shadow: 3px -3px 3px rgba(0, 0, 0, 0.1);
 }
+#contact-box{
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.6);
+    margin-bottom: 3rem;
+    padding-left: 3rem;
+}
 #contact-box iframe{
     width: 100%;
     height: 17rem;
@@ -553,6 +567,7 @@ footer a{
     display: flex;
     flex-direction: row;
     align-items: baseline;
+    justify-content: space-between;
 }
 #contact-form input[type="text"], #contact-form input[type="email"]{
     border-bottom: 1px solid var(--primaryText);
