--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,11 +607,79 @@ footer form > input[type="email"]{
 footer form > input[type="text"]{
     border-bottom: 1px solid var(--primaryText);
 }*/
+#anya{
+    display: grid;
+    grid-template-columns: 600px auto;
+    grid-template-rows: min-content;
+}
+#anya img{
+    width: 500px;
+    height: auto;
+}
+#anya-title{
+    position: relative;
+    border-right: 3px solid black;
+    border-top:   3px solid black;
+    margin-top: 6rem;
+    margin-bottom: 4rem;
+    height: 23rem;
+    width: inherit;
+}
+#anya-title h2{
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    font-size: 8rem;
+    text-align: left;
+    position:absolute;
+    left:-12rem;
+}
 
+#anya-content h3{
+    position:relative;
+    font-size: 2.5rem;
+    font-style: italic;
+    font-family: 'Cormorant Garamond', serif;
+}
+#anya-content h3::before{
+    content:'';
+    width: 12rem;
+    height: 1px;
+    background-color: #000000;
+    position: absolute;
+    left: -16rem;
+    bottom: 1.5rem;
+}
+#anya-content{
+    padding-right: 1rem;
+}
+#anya-content p{
+    font-size: 1rem;
+}
 #author h3{
     font-size: 24px;
-    font-family: 'Cormorant-Garamond', serif;
+    font-family: 'Cormorant Garamond', serif;
     font-weight: 400;
+}
+.fw-400{
+    font-weight: 400;
+}
+.fw-600{
+    font-weight: 600;
+}
+.u-shape{
+    position: absolute;
+    right:0;
+    width: 8rem;
+    height: inherit;
+    border-bottom: 3px solid black;
+}
+.u-shape-dot{
+    background-color: black;
+    width: 3px;
+    height: 3px;
+    position: absolute;
+    right: -3px;
+    bottom: -3px;
 }
 
 @media (max-width: 800px) {
