--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ p{
 
 /*TOP*/
 header{
-    margin-bottom: 60px;
+    margin-bottom: 4rem;
 }
 .top-block{
     width: 100%;
@@ -668,6 +668,9 @@ footer form > input[type="text"]{
 }
 .fw-600{
     font-weight: 600;
+}
+.fw-200{
+    font-weight: 200;   
 }
 .u-shape{
     position: absolute;
