--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,11 +106,11 @@ p{
 }           /*END OF WARNING*/
 .border-btm{
     transition: 700ms;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgba(0,0,0,0.0);
 }
 .border-top{
     transition: 700ms;
-    border-top: 1px solid white;
+    border-top: 1px solid rgba(0,0,0,0.0);
 }
 :hover.border-btm{
     border-bottom: 1px solid var(--thinBorder);
@@ -191,7 +191,7 @@ nav ul li{
     font-size: 0.75rem;
     bottom: -4.5rem;
     left: 0;
-    color: #ffffff;
+    color: rgba(0,0,0,0.0);
     transition: all ease 700ms 250ms;
 }
 .tooltip:hover::after{
@@ -221,7 +221,7 @@ nav ul li{
 
 
 .search input[type="text"]::placeholder{
-    color: #fff;
+    color: rgba(0,0,0,0.0);
 }
 .search input[type="text"]:focus::placeholder{
     color: var(--secondaryText);
@@ -577,6 +577,7 @@ footer a{
 #contact-form input[type="text"], #contact-form input[type="email"]{
     border-bottom: 1px solid var(--primaryText);
     margin: 1rem;
+    width: 45%;
 }
 #faq h2{
     font-family: 'Cormorant Garamond', serif;
@@ -665,10 +666,10 @@ footer a{
     right:0;
     width: 8rem;
     height: inherit;
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #000000;
 }
 .u-shape-dot{
-    background-color: black;
+    background-color: #000000;
     width: 3px;
     height: 3px;
     position: absolute;
@@ -712,6 +713,7 @@ footer a{
     display: flex;
     flex-direction: column;
 }
+
 @media (max-width: 800px) {
     .top-block{
         flex-direction: column;
