--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,8 +387,9 @@ aside > p, aside > a{
 }
 .center-grid{
     display: grid;
-    grid-template-columns: 38.197% auto 38.197%;
+    grid-template-columns:1fr 2fr 1fr;
     grid-auto-rows: min-content;
+    column-gap: 2rem;
 }
 .right-image{
     grid-column: 2 / 3;
@@ -713,6 +714,137 @@ footer a{
     display: flex;
     flex-direction: column;
 }
+
+#gown img{
+    width: 100%;
+    height: auto;
+    
+}
+#gown-title{
+    margin-top:6rem;
+    position:relative;
+}
+#gown-quot{
+    position:absolute;
+    bottom:0;
+    right:0;
+    border: 1px solid #000;
+    padding: 5rem 1.5rem;
+}
+#gown-quot div:nth-of-type(1){
+    text-align: center;
+    margin-bottom: 3rem;
+}
+#gown-quot a{
+    font-size: 3.75rem;
+}
+#gown-title > h2{
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    font-size: 3.75rem;
+    text-align: right;  
+    position:absolute;
+    top:0;
+    left: 10rem;
+}
+#gown-content > h3{
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+#gown-content{
+    background-color: #f7e8dd;
+    padding: 3rem 1.5rem 3rem 1.5rem;
+    margin-bottom: 1.5rem;
+}
+#gown-content p{
+    line-height: 1.3;
+}
+#gown-links{
+    padding: 0 1.5rem;
+}
+#gown-links li a{
+    display: block;
+    width: fit-content;
+    text-transform: capitalize;
+    border: 1px solid #000000;
+    padding: 0.5rem 1.5rem;
+    margin: 1rem 0;
+    transition: all 200ms;
+}
+#gown-links li a:hover{
+    color: #fff;
+    background-color: #000;
+    font-weight: 400;
+}
+.grid2x2{
+    width: inherit;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1.5rem;
+}   
+article.center-grid{
+    margin-bottom: 1.5rem;
+}
+#blazer-img img{
+    width: 100%;
+    height: auto;
+}
+.relative{
+    position:relative;
+}
+#blazer-caption{
+    border: 1px solid #000;
+    border-right: none;
+    text-align: right;
+    padding: 1rem 0 1rem 8rem;
+    position: absolute;
+    left:4rem;
+    top: 2rem;
+    width: max-content;
+}
+#blazer-caption h2{
+    font-style: italic;
+    font-family: 'Cormorant Garamond',serif;
+    font-size: 3rem;
+}
+#blazer-img-tall img{
+    width: 100%;
+    height: auto;
+}
+#blazer-quot, #custom-fb{
+    padding: 3rem 1.5rem;
+    background-color: #cbcbcb;
+}
+#blazer-quot a,#custom-fb a{
+    font-size: 4rem;
+}
+#blazer-quot div:first-of-type,#custom-fb div:first-of-type{
+  text-align: center;
+  margin-bottom: 3rem;
+}
+#blazer-content, #custom-txt{
+    padding: 3rem 1.5rem;
+    border: 1px solid #000;
+}
+#blazer-content h3,#custom-txt h2{
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    font-size: 2rem;
+    margin: 1rem 0;
+}
+.line-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1.5rem;
+}
+#custom-img img{
+    width: 100%;
+    height: auto;
+}
+
 
 @media (max-width: 800px) {
     .top-block{
